# delegate

./: .gitignore  CHANGELOG.md  LICENCE  README.md  TODO.md  index.html  install.json  package-lock.json  package.json  tailwind.config.js  tailwind.storybook.config.js  tsconfig.json  vite.config.ts
.storybook/: main.js  preview.js
docs/: sqlite-example-queries.md
excalidraw/: mission.excalidraw
src/: App.tsx  (+5 more)
src-tauri/: .gitignore  Cargo.toml  be_architecture.excalidraw  tauri.conf.json
src-tauri/icons/: icon.icns
src-tauri/migrations/2023-02-08-202700_CREATE-TABLE-bots.sql/: down.sql  up.sql
src-tauri/migrations/2023-02-08-203552_CREATE-TRIGGER-bots_settings_json_validate.sql/: down.sql  up.sql
src-tauri/migrations/2023-02-08-213329_CREATE-TABLE-_config.sql/: down.sql  up.sql
src-tauri/migrations/2023-02-08-220553_CREATE-TABLE-chats.sql/: down.sql  up.sql
src-tauri/migrations/2023-02-08-221744_CREATE-TRIGGER-chats_settings_json_valid.sql/: down.sql  up.sql
src-tauri/migrations/2023-02-08-223700_CREATE-TABLE-messages.sql/: down.sql  up.sql
src-tauri/migrations/2023-02-08-224024_CREATE-TRIGGER-messages_content_json_validate.sql/: down.sql  up.sql
src-tauri/migrations/2023-03-17-094157_CREATE_DELEGATE_BOT/: down.sql  up.sql
src-tauri/migrations/2023-03-23-052743_CREATE_TABLE-logs/: down.sql  up.sql
src-tauri/migrations/2023-03-27-081400_UPDATE_BOTS_TO_STREAM/: up.sql
src-tauri/migrations/2023-03-27-081410_UPDATE_BOTS_TO_STREAM copy/: up.sql
src-tauri/migrations/2023-03-27-081410_UPDATE_BOTS_TO_STREAM2/: up.sql
src-tauri/migrations/2023-03-28-151943_CREATE_FTS_CHATS/: down.sql  up.sql
src-tauri/migrations/2023-03-28-152000_CREATE_FTS_MESSAGES/: down.sql  up.sql
src-tauri/migrations/2023-03-29-105742_UPDATE_MESSAGES_delete_old_raw_array/: up.sql
src-tauri/sqlite/: db.excalidraw
src-tauri/src/: build.rs  controller.rs  database.rs  global_error.rs  global_state.rs  main.rs  schema.rs
src-tauri/src/models/: config.rs
(+46 files in other folders)
