[package]
name = "delegate"
version = "0.1.0"
description = "A Tauri App"
authors = ["you"]
license = ""
repository = ""
edition = "2021"
rust-version = "1.57"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[build-dependencies]
tauri-build = { version = "1.2", features = [] }

[dependencies]
serde_json = "1.0"
serde = { version = "1.0", features = ["derive"] }
tauri = { version = "1.2", features = ["devtools", "http-all", "path-all", "process-all", "shell-open", "updater"] }
dotenv = "0.15.0"
lazy_static = "1.4.0"
log = "0.4.0"
env_logger = "0.9.0"
diesel = { version = "2.0.0", features = ["sqlite", "returning_clauses_for_sqlite_3_35", "serde_json", "uuid"] }
diesel_migrations = { version = "2.0.0" }
# TODO: might want to remove this
libsqlite3-sys = { version = "0.24.2", features = ["bundled"] }
dotenvy = "0.15"
reqwest = { version = "0.11", features = ["blocking", "json", "stream"] }
tokio = { version = "1.10", features = ["full"] }
futures = "0.3"
# TODO: might want to remove this
# rusqlite = { version = "0.28.0", features = ["bundled"] }

[dependencies.uuid]
version = "1.2.2"
features = [
    "v4",                # Lets you generate random UUIDs
    "fast-rng",          # Use a faster (but still sufficiently random) RNG
    "macro-diagnostics", # Enable better diagnostics for compile-time UUIDs
]

[dependencies.tauri-plugin-sql]
git = "https://github.com/tauri-apps/plugins-workspace"
branch = "dev"
features = ["sqlite"] # or "postgres", or "mysql"

[features]
# by default Tauri runs in production mode
# when `tauri dev` runs it is executed with `cargo run --no-default-features` if `devPath` is an URL
default = ["custom-protocol"]
# this feature is used used for production builds where `devPath` points to the filesystem
# DO NOT remove this
custom-protocol = ["tauri/custom-protocol"]
